// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ElapsedTime column calling the columns Cell method results in proper response or object 1`] = `
<span
  title="11:20:00"
>
  11:20:00
</span>
`;

exports[`ElapsedTime column returns the proper object column configuration object 1`] = `
Object {
  "Cell": [Function],
  "Filter": [Function],
  "Header": "Elapsed Time",
  "accessor": [Function],
  "filterMethod": [Function],
  "id": "elapsedTime",
  "minWidth": 150,
  "resizable": false,
  "show": 300000,
}
`;

exports[`ElapsedTimeFilter renders a default properly when no filter is passed in 1`] = `
<Connect(CustomDropdownMenu)
  buttonType="columnFilter"
  className="elapsedTime"
  currentFilter="All Results"
  menuType="Elapsed Time"
  tableType="mockTable"
  updateFilter={[Function]}
>
  <styled.div>
    <FilterSelect
      defaultValue="Greater Than"
      onChange={[Function]}
      options={
        Array [
          "Greater Than",
          "Less Than",
        ]
      }
    />
    <styled.input
      onChange={[Function]}
      value={0}
    />
    <FilterSelect
      defaultValue="Seconds"
      onChange={[Function]}
      options={
        Array [
          "Minutes",
          "Seconds",
        ]
      }
    />
  </styled.div>
</Connect(CustomDropdownMenu)>
`;

exports[`Time filter sub menu renders the time filter menu with default values 1`] = `
<ElapsedTimeFilter
  filter={
    Object {
      "id": "0000-0000-0000-0000",
      "value": "",
    }
  }
  onChange={[Function]}
  tableType="mockTable"
/>
`;

exports[`Time filter sub menu renders the time filter menu, greater than in minutes 1`] = `
<ElapsedTimeFilter
  filter={
    Object {
      "id": "0000-0000-0000-0000",
      "value": "Greater Than:1:Minutes",
    }
  }
  onChange={[Function]}
  tableType="mockTable"
/>
`;

exports[`Time filter sub menu renders the time filter menu, greater than in seconds 1`] = `
<ElapsedTimeFilter
  filter={
    Object {
      "id": "0000-0000-0000-0000",
      "value": "Greater Than:1:Seconds",
    }
  }
  onChange={[Function]}
  tableType="mockTable"
/>
`;

exports[`Time filter sub menu renders the time filter menu, less than in minutes 1`] = `
<ElapsedTimeFilter
  filter={
    Object {
      "id": "0000-0000-0000-0000",
      "value": "Less Than:1:Minutes",
    }
  }
  onChange={[Function]}
  tableType="mockTable"
/>
`;

exports[`Time filter sub menu renders the time filter menu, less than in seconds 1`] = `
<ElapsedTimeFilter
  filter={
    Object {
      "id": "0000-0000-0000-0000",
      "value": "Less Than:1:Seconds",
    }
  }
  onChange={[Function]}
  tableType="mockTable"
/>
`;
